# bubbleflow

./: README.md  giorgio fa cagare.txt  pyproject.toml
src/bubbleflow/: run.py
src/bubbleflow/config/: metadata.ini
src/bubbleflow/gui/: __init__.py  bubble_chart_window.py
src/bubbleflow/modules/: bubble_chart_files.py  file_comparator.py  file_system_walker.py  transformatrix.py
