[tool.poetry]
name = "bubbleflow"
version = "0.0.1"
description = "Quick filesystem navigation using bubble diagram and rapid mouse control"
authors = ["giobdev"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "bubbleflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^2.0.0"
networkx = "^3.4.2"
sentence-transformers = "^3.3.1"

[tool.poetry.scripts]
bubbleflow = "bubbleflow.run:main"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
